--- a/fileindexer-frontend/FileIndexer/src/app/app.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.html
@@ -7,9 +7,9 @@
 
 <div class="content" role="main">
   <section>
-    <h2>Products</h2>
+    <h2>Scan jobs</h2>
 
-    <app-product-list></app-product-list>
+    <app-scanjob-list></app-scanjob-list>
   </section>
 </div>
 
