--- a/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.html
@@ -1,3 +1,4 @@
+
 <table>
     <thead>
         <tr>
@@ -8,7 +9,8 @@
     <tbody>
         <tr *ngFor="let job of scanJobStatusData">
             <td>{{ job.id }}</td>
-            <td>{{ job.value }}</td>
+            <td>{{ job.status }}</td>
         </tr>
     </tbody>
 </table>
+<h4>Retrival date: {{scanJobStatusDataTs | date: 'HH:mm:ss (z)' }}</h4>
