front'end stuff

--- a/fileindexer-frontend/FileIndexer/src/app/app.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.html
@@ -5,10 +5,16 @@
   </div>  
 </header>
 
+
+
 <div class="content" role="main">
   <section>
-    <h2>Scan jobs</h2>
+    <h2>Indexed data</h2>
+    <app-searchinindex></app-searchinindex>
+  </section>
 
+  <section>
+    <h2>Scan jobs</h2>
     <app-scanjob-list></app-scanjob-list>
   </section>
 </div>
