--- a/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.html
@@ -1,4 +1,6 @@
-
+<div class="pagetooolbar">
+    <button type="button" (click)="enqueueScanJob()">Scan files</button>
+</div>
 <table>
     <thead>
         <tr>
