--- a/fileindexer-frontend/FileIndexer/src/app/app.component.css
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.css
@@ -31,7 +31,7 @@ header span {
   padding: 0 16px;
   max-width: 960px;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 
 
