--- a/fileindexer-frontend/FileIndexer/src/app/app.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.html
@@ -9,6 +9,12 @@
 
 <div class="content" role="main">
   <section>
+    <h2>Image analysis</h2>
+    <app-imgash-add></app-imgash-add>
+  </section>
+
+
+  <section>
     <h2>Indexed data</h2>
     <app-searchinindex></app-searchinindex>
   </section>
