--- a/fileindexer-frontend/FileIndexer/src/app/components/imgash-add/imgash-add.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/imgash-add/imgash-add.component.html
@@ -1,9 +1,9 @@
 
 
 <div class="formcontainer">
-    <h1>Add job</h1>
+    <h1>Analyze image</h1>
 
-    <form [formGroup]="createScanJobForm" (submit)="enqueueScanJob()">
+    <form [formGroup]="createImageAnalysisJobForm" (submit)="enqueueImageAnalysisJob()">
         
         <span>
             <label for="path">path</label>
