--- a/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.css
+++ b/fileindexer-frontend/FileIndexer/src/app/components/scanjob-list/scanjob-list.component.css
@@ -3,8 +3,9 @@ table {
     border-collapse: collapse;
     min-width: 100%;
     grid-template-columns: 
-    minmax(20px,  1.67fr)
-    minmax(400px, 3fr)
+    minmax(20px,  40px)
+    minmax(200px, 0.3fr)
+    minmax(200px, 1fr)
 }
   
 thead,
