--- a/fileindexer-frontend/FileIndexer/src/app/app.component.css
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.css
@@ -247,3 +247,11 @@ header span {
       visibility: hidden;
     }
   }
+
+  .toolbar-horizontal-nav a {
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
