--- a/fileindexer-frontend/FileIndexer/src/app/app.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="toolbar" role="banner">
-    <span lang="sv">{{ title }}</span>
+    <span lang="sv"><img src="../assets/g207_white.png" alt="{{ title }}"></span>
     <nav class="toolbar-horizontal-nav">
       <span><a routerLink="/job-list" routerLinkActive="active" ariaCurrentWhenActive="page">Task list</a></span>
       <span><a routerLink="/imghash-list" routerLinkActive="active" ariaCurrentWhenActive="page">Image data</a></span>
