--- a/fileindexer-frontend/FileIndexer/src/app/components/searchinindex/searchinindex.component.css
+++ b/fileindexer-frontend/FileIndexer/src/app/components/searchinindex/searchinindex.component.css
@@ -1,90 +1,9 @@
-table {
+.table-indexed-data {
     display: grid;
-    border-collapse: collapse;
-    min-width: 100%;
     grid-template-columns: 
     minmax(20px,  40px)
     minmax(200px, 0.3fr)
     minmax(200px, 1fr)
     minmax(100px, 0.3fr);
-
-}
-  
-thead,
-tbody,
-tr {
-    display: contents;
-    cursor: pointer;
 }
 
-tr:nth-child(even) td {
-    background: #fffefb;
-}
-
-th,
-td {
-    padding: 0.5rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-  
-th {
-    position: sticky;
-    top: 0;
-    background: #7b7c88;
-    text-align: left;
-    font-size: 0.9rem;
-    color: white;
-    position: relative;
-}
-  
-td {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #7b7c88;
-}
-  
-h2 {
-    font-size: 0.9rem;
-}
-
-.flex-container { 
-    display:flex; 
-    margin:auto;
-    justify-content: space-between;
-}
-
-.main { 
-    flex:3 
-}
-
-.sidebar {   
-    flex:1; 
-    min-width: 300px;
-	padding: 5px 12px 10px 20px;
-    border: 1px solid #C2C2C2;
-    border-radius: 3px;
-	box-shadow: 1px 1px 4px #EBEBEB;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    min-height: 250px;
-}
-
-.sidebar ul {
-    list-style: none;
-}
-
-.sidebar li .details-key {
-    font-weight: 700;
-}
-.sidebar li .details-value {
-    font-weight: normal;
-    margin-left: 10px;
-}
-
-.sidebar h1 {
-    font-size: 1em;
-    border-bottom: 1px solid #C2C2C2;
-    margin-bottom: 10px;
-}
