--- a/fileindexer-frontend/FileIndexer/src/app/components/device-add/device-add.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/device-add/device-add.component.html
@@ -16,9 +16,9 @@
             </span>
         </span>
    
-        <span>
-            <button class="button" type="submit">Register</button>
-        </span>
-        
+        <div class="form-buttons-row">
+            <button type="button" (click)="cancel()">Cancel</button>
+            <button type="submit">Register</button>
+        </div>
     </form>
 </div>
