--- a/fileindexer-frontend/FileIndexer/src/app/components/modalform/modalform.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/modalform/modalform.component.html
@@ -1,3 +1,5 @@
-<div class="modalform-body">
-    <ng-content></ng-content>
+<div class="modalform-container">
+    <div class="modalform-body">
+        <ng-content></ng-content>
+    </div>
 </div>
