--- a/fileindexer-frontend/FileIndexer/src/app/components/imgash-add/imgash-add.component.html
+++ b/fileindexer-frontend/FileIndexer/src/app/components/imgash-add/imgash-add.component.html
@@ -26,7 +26,7 @@
             </select>
         </span>
    
-        <span>
+        <span class="form-buttons-row">
             <button class="button" type="submit">Save</button>
         </span>
         
